build/log/idf_py_stderr_output_11454
In file included from /home/noctis/Progra/ci_comunication/main/ci_comunication.c:2:
/home/noctis/Progra/ci_comunication/main/message_data.h:28:1: warning: no semicolon at end of struct or union
   28 | } P_Data_T;
      | ^
/home/noctis/Progra/ci_comunication/main/message_data.h:43:9: error: unknown type name 'P_Data_t'; did you mean 'P_Data_T'?
   43 |         P_Data_t data;
      |         ^~~~~~~~
      |         P_Data_T
/home/noctis/Progra/ci_comunication/main/message_data.h:47:1: warning: no semicolon at end of struct or union
   47 | } Solicitud_t;
      | ^
/home/noctis/Progra/ci_comunication/main/message_data.h:53:1: warning: no semicolon at end of struct or union
   53 | } Respuesta_t;
      | ^
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:4:10: fatal error: freertos/Task.h: No such file or directory
    4 | #include "freertos/Task.h"
      |          ^~~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/ci_comunication.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
